<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.mycompany.app</groupId>
  <artifactId>jrotractor_loose</artifactId>
  <packaging>jar</packaging>
  <version>0.2-SNAPSHOT</version>
  <name>app</name>
  <url>http://maven.apache.org</url>
  <developers>
    <developer>
      <name>Serguei Kouzmine</name>
      <email>kouzmine_serguei@yahoo.com</email>
      <organization/>
      <organizationUrl>https://github.com/sergueik</organizationUrl>
    </developer>
  </developers>
  <properties>
    <encoding>UTF-8</encoding>
    <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
    <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
    <browser.name>chrome</browser.name>
    <commons-exec.version>1.3</commons-exec.version>
    <commons-io.version>2.7</commons-io.version>
    <commons-lang3.version>3.0.1</commons-lang3.version>
    <hamcrest-all.version>1.3</hamcrest-all.version>
    <hamcrest-date.version>2.0.4</hamcrest-date.version>
    <java.version>1.8</java.version>
    <junit.version>4.13.1</junit.version>
    <maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
    <maven-surefire-plugin.version>2.20</maven-surefire-plugin.version>
    <minimal-json.version>0.9.5</minimal-json.version>
    <selenium.version>4.6.0</selenium.version>
    <selenium-devtools-v107.version>${selenium.version}</selenium-devtools-v107.version>
    <selenium-chrome-driver.version>${selenium.version}</selenium-chrome-driver.version>
    <selenium-firefox-driver.version>${selenium.version}</selenium-firefox-driver.version>
    <selenium-ie-driver.version>${selenium.version}</selenium-ie-driver.version>

    <testng.version>6.14.3</testng.version>
    <gson.version>2.8.9</gson.version>
    <guava.version>23.1</guava.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.exparity</groupId>
      <artifactId>hamcrest-date</artifactId>
      <version>${hamcrest-date.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>${hamcrest-all.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <!-- NOTE: OK for YAML data serialization through jackson; commons-lang would not be OK -->
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-exec</artifactId>
      <version>${commons-exec.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-api</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v106</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v105</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v104</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v103</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v102</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v101</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v100</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v99</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v97</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v96</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v95</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v85</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-devtools-v107</artifactId>
      <version>${selenium-devtools-v107.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-remote-driver</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-firefox-driver</artifactId>
      <version>${selenium-firefox-driver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-chrome-driver</artifactId>
      <version>${selenium-chrome-driver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-ie-driver</artifactId>
      <version>${selenium-ie-driver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-support</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-remote-driver</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
      <exclusions>
        <exclusion>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.opera</groupId>
        <artifactId>firefoxdriver</artifactId>
        <version>1.1</version>
        <exclusions>
          <exclusion>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-remote-driver</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <goals>
          <goal>compile</goal>
        </goals>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${encoding}</encoding>
          <!-- On windows one needs to update console code page outside of maven
to work with cyrillic pages:
chcp 65001
set JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF-8
rem ${encoding}
 -->
          <compilerArgument>-Xlint:all</compilerArgument>
          <compilerArgument>-Xlint:-processing</compilerArgument>
		  <!-- NOTE: some compiler optimizatino flags not recognized on JDK 1.8.0.101 and were added in later builds e.g. 1.8.0.151:  
                  Fatal error compiling: 
                  invalid flag: -XX:+AggressiveUnboxing
                  invalid flag: -XX:+AggressiveOpts
                  invalid flag: -XX:+UnlockExperimentalVMOptions
                  -->
          <!--
          <compilerArgument>-XX:+UnlockExperimentalVMOptions</compilerArgument>
          <compilerArgument>-XX:+AggressiveOpts</compilerArgument>
	  <compilerArgument>-XX:+AggressiveUnboxing</compilerArgument>
	  -->
          <!--
   <compilerArgument>-Dfile.encoding=${encoding}</compilerArgument>
Fatal error compiling: invalid flag: -Dfile.encoding=UTF-8 -> [Help 1]
-->
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <phase>install</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <trimStackTrace>false</trimStackTrace>
          <encoding>${encoding}</encoding>
          <!--
          NOTE: specifying the suite XML file prevents surefile from scannint all tests casses and execute everything with the method name mask match
          <suiteXmlFiles>
            <suiteXmlFile>src/test/resources/suites/testng.xml</suiteXmlFile>
          </suiteXmlFiles>
          -->
          <!-- For parallel runs with e.g. Vagrant https://github.com/sergueik/selenium-fluxbox
          <argLine>-Dfile.encoding=${encoding} -Dparallel=tests -DthreadCount=2 </argLine>
          -->
          <argLine>-Dfile.encoding=${encoding}</argLine>
          <!-- Skip the default running of this plug-in (or everything is run twice...see below) -->
          <skip>true</skip>
        </configuration>
        <executions>
          <execution>
            <id>unit-tests</id>
            <phase>test</phase>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <skip>false</skip>
              <systemPropertyVariables>
                <webdriver.driver>${browser.name}</webdriver.driver>
                <selenium.version>${selenium.version}</selenium.version>
                <property.filepath>${property.filepath}</property.filepath>
              </systemPropertyVariables>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${maven-resources-plugin.version}</version>
        <artifactId>maven-resources-plugin</artifactId>
        <configuration>
          <encoding>${encoding}</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>properties</id>
      <properties>
        <!-- https://www.mojohaus.org/properties-maven-plugin/usage.html -->
        <property.filepath>target/classes</property.filepath>
        <username>sergueik2016</username>
        <username>automationnewuser24@gmail.com</username>
        <password>${env.TEST_PASSWORD}</password>
        <!-- when not set will result in the verbatim value 'password' = '${env.TEST_PASSWORD}'-->
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.0.0</version>
            <executions>
              <execution>
                <phase>generate-resources</phase>
                <goals>
                  <goal>write-project-properties</goal>
                </goals>
                <configuration>
                  <outputFile>
                ${project.build.outputDirectory}/test.properties
              </outputFile>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <!-- this maven-surefire-plugin does not seem to be used during the test phase, removed -->
        </plugins>
      </build>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>chrome</id>
      <properties>
        <browser.name>chrome</browser.name>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>edge</id>
      <properties>
        <browser.name>edge</browser.name>
      </properties>
    </profile>
    <profile>
      <id>firefox</id>
      <properties>
        <browser.name>firefox</browser.name>
      </properties>
    </profile>
    <profile>
      <!-- https://stackoverflow.com/questions/166895/different-dependencies-for-different-build-profiles -->
      <id>yandex</id>
      <properties>
        <browser.name>yandex</browser.name>
      </properties>
      <dependencies>
        <dependency>
          <groupId>com.opera</groupId>
          <artifactId>operadriver</artifactId>
          <version>0.7.3</version>
        </dependency>
      </dependencies>
    </profile>
  </profiles>
  <repositories>
    <repository>
      <id>maven-central</id>
      <name>maven central repo</name>
      <url>https://mvnrepository.com/repos/central</url>
    </repository>
    <repository>
      <id>osgeo</id>
      <name>osgeo repo</name>
      <url>https://download.osgeo.org/webdav/geotools/</url>
    </repository>
    <repository>
      <id>seasar</id>
      <name>seasar repo</name>
      <url>https://www.seasar.org/maven/maven2</url>
    </repository>
    <repository>
      <id>jcenter</id>
      <url>https://jcenter.bintray.com/</url>
    </repository>
    <repository>
      <id>swt-repo</id>
      <url>https://swt-repo.googlecode.com/svn/repo/</url>
    </repository>
    <repository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>
    <repository>
      <id>consol</id>
      <url>https://labs.consol.de/maven/repository/</url>
    </repository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
    <repository>
      <id>project.local</id>
      <name>project</name>
      <url>file:${project.basedir}/repo</url>
    </repository>
  </repositories>
</project>
